--- a/public_html/html/index.html
+++ b/public_html/html/index.html
@@ -7,9 +7,9 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
-<!-- <link rel="stylesheet/less" type="text/css" href="css/style.less" />
-<script src="js/less.min.js" type="text/javascript"></script> -->
-<link rel="stylesheet"  type="text/css" href="css/styles.css" />
+<link rel="stylesheet/less" type="text/css" href="css/style.less" />
+<script src="js/less.min.js" type="text/javascript"></script>
+<!-- <link rel="stylesheet"  type="text/css" href="css/styles.css" /> -->
 </head>
 <body>
 	<div>
@@ -20,8 +20,8 @@
 					<div class="col-sm-2 col-md-2"><a href="#"><img class="img-responsive pad-l-40" alt="" src="images/vnw.png"></a></div>
 					<div class="col-sm-2 col-md-2"><a href="#"><img class="img-responsive pad-l-50" alt="" src="images/evo.png"></a></div>
 				</div>
-				</div>
-				<div id="note" class="container-fluid">
+			</div>
+			<div id="note" class="container-fluid">
 					<nav class="navbar navbar-default navbar-static hei-menu" id="navbar-example">
 				      <div class="container">
 				        <div class="navbar-header">
@@ -150,7 +150,7 @@
 							</div>
 						</div>
 						<div class="text-center">
-							<input type="submit" class="btn active regis-blue" value="Đăng ký">
+							<button type="submit" class="btn active regis-red"> Đăng ký <span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span></button>
 						</div>
 					</form>
 			</div>
@@ -171,28 +171,24 @@
 				<h2 class="h2-red">Nội Dung và phạm vi của bài thi JLIT</h2>
 			</div>
 		</div>
-		<div class="container-fluid mar-t-50 bag-gray">
-				<div class="container text-center">
+		<div class="container mar-t-50 bag-gray">
+				<div class="text-center">
 					<div class="learn-content">
 						<div class="row">
-							<div class="col-sm-4">
+							<div class="col-sm-6">
 								<img alt="" src="images/8.png">
 								<p>Kiến thức ngôn ngữ</p>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-6">
 								<img alt="" src="images/9.png">
 								<p>Nghe hiểu</p>
-							</div>
-							<div class="col-sm-4">
-								<img  alt="" src="images/10.png">
-								<p>Phỏng vấn</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="container content">
-				<div class="row mar-t-10" >
+				<div class="row no-mar mar-t-10" >
 					<div class="col-lg-4 none-padd">
 						<div class="title-red">
 							<span><span class="tit_head">JL1</span> - Cao cấp</span>
@@ -223,28 +219,32 @@
 						</div>
 					</div>
 				</div>
-				<div class="row mar-t-150">
+				<div class="row mar-t-50">
 					<div class="col-lg-4">
-						<img class="img-responsive" alt="" src="images/11.png">
+						<div class="intro-title"><a href="#"><img alt="" src="images/arrow2.png">  Mục đích của JLIT</a></div>
+						<div class="bo-intro">
+							<img class="img-responsive" alt="" src="images/10.png">
+						</div>
 					</div>
 					<div class="col-lg-4">
-						<img class="img-responsive" alt="" src="images/12.png">
+						<div class="intro-title"><a href="#"><img alt="" src="images/arrow2.png"> Lợi ích của JLIT</a></div>
+						<div class="bo-intro">
+							<img class="img-responsive" alt="" src="images/11.png">
+						</div>
 					</div>
 					<div class="col-lg-4">
-						<img class="img-responsive" alt="" src="images/13.png">
+						<div class="intro-title"><a href="#"><img alt="" src="images/arrow2.png"> Lời ngỏ từ JLIT</a></div>
+						<div class="bo-intro">
+							<img class="img-responsive" alt="" src="images/12.png">
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid mar-t-50 bag-gray">
-				<div id="a-register" class="container mar-bt-50 mar-t-50">
-					<div class="row a-register">
-						<div class="col-sm-3 text-center">
-							<img alt="" src="images/14.png">
-						</div>
-						<div class="col-sm-9">
-							<h2>Let's immediately application</h2>
-							<a href="#">Đăng ký</a>
-						</div>
+			<div class="container-fluid mar-t-50 bag-red">
+				<div id="a-register" class="container mar-bt-50 mar-t-50 text-center a-register">
+					<div>
+							<h2>Hãy đăng ký tham gia kỳ thi miễn phí</h2>
+							<a href="#">Đăng ký <img alt="" src="images/arr.png"></a>
 					</div>
 				</div>
 			</div>
@@ -290,16 +290,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid mar-t-50 bag-gray">
-				<div class="container mar-bt-50 mar-t-50">
-					<div class="row a-register">
-						<div class="col-sm-3 text-center">
-							<img alt="" src="images/14.png">
-						</div>
-						<div class="col-sm-9">
-							<h2>Let's immediately application</h2>
-							<a href="#">Đăng ký</a>
-						</div>
+			<div class="container-fluid mar-t-50 bag-red">
+				<div id="a-register" class="container mar-bt-50 mar-t-50 text-center a-register">
+					<div>
+							<h2>Hãy đăng ký tham gia kỳ thi miễn phí</h2>
+							<a href="#">Đăng ký <img alt="" src="images/arr.png"></a>
 					</div>
 				</div>
 			</div>
