--- a/public_html/html/index.html
+++ b/public_html/html/index.html
@@ -7,9 +7,9 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
-<link rel="stylesheet/less" type="text/css" href="css/style.less" />
-<script src="js/less.min.js" type="text/javascript"></script>
-<!-- <link rel="stylesheet"  type="text/css" href="css/styles.css" /> -->
+<!-- <link rel="stylesheet/less" type="text/css" href="css/style.less" />
+<script src="js/less.min.js" type="text/javascript"></script> -->
+<link rel="stylesheet"  type="text/css" href="css/styles.css" />
 </head>
 <body>
 	<div>
