--- a/public_html/html/index.html
+++ b/public_html/html/index.html
@@ -4,12 +4,13 @@
 <title>TODO supply a title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <!-- <link rel="stylesheet/less" type="text/css" href="css/style.less" />
-<script src="js/less.min.js" type="text/javascript"></script> -->
-<link rel="stylesheet"  type="text/css" href="css/styles.css" />
+<script src="js/less.min.js" type="text/javascript"></script>-->
+<link rel="stylesheet"  type="text/css" href="css/styles.css" /> 
 </head>
 <body>
 	<div>
@@ -68,7 +69,7 @@
 					<div class="text-center item active">
 						<img class="img-responsive" style="width: 100%" src="images/banner.png" alt="">
 						 <div class="carousel-caption format-stand">
-					        <h4>Kỳ thi năng lực nhật ngữ cho chuyen ngành IT</h4>
+					        <h4>Kì thi năng lực nhật ngữ cho chuyên ngành IT</h4>
 							<p>Japanse literacy & IT Test(JLIT)</p>
 							<a href="#">Đăng ký miễn phí</a><br><br>
 							<img class="" src="images/arrow.png" alt="">
@@ -87,7 +88,7 @@
 				<img class="img-responsive" style="width: 100%" src="images/bg1.png" alt="">
 			</div>
 			<h1 class="text-center regis">Đăng ký dự thi miễn phí</h1>
-				<div class="container bg1 mar-bt-50">
+				<div class="container bg1 mar-bt-100">
 					<form action="" class="form-horizontal" role="form">
 						<div class="row mar-bt-20">
 							<div class="col-md-6 col-xs-12">
@@ -150,14 +151,14 @@
 							</div>
 						</div>
 						<div class="text-center">
-							<button type="submit" class="btn active regis-red"> Đăng ký <span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span></button>
+							<button type="submit" class="btn active regis-red"> Đăng ký  <img alt="" src="images/arr.png"></button>
 						</div>
 					</form>
 			</div>
 		</div>
 		<div class="container content">
 			<div class="row mar-t-150">
-				<div class="col-sm-5">
+				<div class="col-sm-5 padd-t-30">
 					<img class="img-responsive" alt="" src="images/news1.png">
 				</div>
 				<div class="col-sm-7 question-right">
@@ -172,19 +173,17 @@
 			</div>
 		</div>
 		<div class="container mar-t-50 bag-gray">
-				<div class="text-center">
-					<div class="learn-content">
-						<div class="row">
-							<div class="col-sm-6">
+				<div class="">
+						<div class="row learn-content">
+							<div class="col-sm-6 right center">
 								<img alt="" src="images/8.png">
 								<p>Kiến thức ngôn ngữ</p>
 							</div>
-							<div class="col-sm-6">
-								<img alt="" src="images/9.png">
+							<div class="col-sm-6 center">
+								<img class="img1" alt="" src="images/9.png">
 								<p>Nghe hiểu</p>
 							</div>
 						</div>
-					</div>
 				</div>
 			</div>
 			<div class="container content">
@@ -240,7 +239,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid mar-t-50 bag-red">
+			<div class="container-fluid mar-t-150 bag-red">
 				<div id="a-register" class="container mar-bt-50 mar-t-50 text-center a-register">
 					<div>
 							<h2>Hãy đăng ký tham gia kỳ thi miễn phí</h2>
@@ -250,7 +249,7 @@
 			</div>
 			<div class="container">
 				<h2 class="text-center h2-red mar-t-150 mar-bt-50">Thông Điệp</h2>
-				<div class="row mar-bt-50">
+				<div class="row mar-bt-100">
 					<div class="col-lg-4 text-center">
 						<img alt="" src="images/15.png">
 					</div>
@@ -263,7 +262,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row mar-bt-50">
+				<div class="row mar-bt-100">
 					<div class="col-lg-4 text-center">
 						<img alt="" src="images/16.png">
 					</div>
@@ -276,7 +275,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row mar-bt-50">
+				<div class="row mar-bt-100">
 					<div class="col-lg-4 text-center">
 						<img alt="" src="images/17.png">
 					</div>
@@ -290,7 +289,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid mar-t-50 bag-red">
+			<div class="container-fluid bag-red">
 				<div id="a-register" class="container mar-bt-50 mar-t-50 text-center a-register">
 					<div>
 							<h2>Hãy đăng ký tham gia kỳ thi miễn phí</h2>
@@ -302,19 +301,20 @@
 			<div class="footer-top">
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-3 text-center pad-t-70">
-							<img alt="" src="images/vnw.png">
+						<div class="col-sm-2 pad-t-70 padd-cent">
+							<img class="img-responsive" alt="" src="images/vnw.png">
 						</div>
-						<div class="col-sm-4 pad-t-70 txt-cent">
-							<img class="img-responsive" alt="" src="images/evo.png">
+						<div class="col-sm-3 txt-cent">
+							<img class="img-responsive"  alt="" src="images/evo.png">
+							<p>Email: jlit@evolable.asia</p>
 						</div>
-						<div class="col-sm-5 text-right">
-							<img class="img-responsive" alt="" src="images/social.png">
+						<div class="col-sm-7 text-right">
+							<img class="img-responsive img-right" alt="" src="images/social.png">
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="footer-botton text-center"> © 2014 Bản quyền thuộc về Evolable Asia /Vietnamwork </div>
+			<div class="footer-botton text-center"> © 2014 Bản quyền thuộc về Evolable Asia / Vietnamwork </div>
 		</footer>
 	</div>
 </body>
